# Compile_Learning

./: CMakeLists.txt
examples/: CMakeLists.txt  basic_usage.c
src/: CMakeLists.txt
src/logger/: CMakeLists.txt
src/logger/include/logger/: logger.h
src/logger/src/: logger.c
src/mathx/: CMakeLists.txt
src/mathx/include/mathx/: algebra.h  geometry.h  mathx.h
src/mathx/include/mathx/algebra/: matrix.h  vector.h
src/mathx/include/mathx/geometry/: line.h  point.h
src/mathx/src/algebra/: matrix.c  vector.c
src/mathx/src/geometry/: line.c  point.c
